[gd_scene load_steps=13 format=3 uid="uid://dklbqle7waw1n"]

[ext_resource type="Script" uid="uid://dfs5c8lcgiqlx" path="res://assets/scripts/window2.gd" id="1_ilyal"]
[ext_resource type="Texture2D" uid="uid://cnw0d5ipkmivj" path="res://assets/gfx/ui/window2.png" id="1_p87ee"]
[ext_resource type="Theme" uid="uid://ditffwdpwhqsc" path="res://assets/scenes/system/window.tres" id="2_ul6if"]
[ext_resource type="FontFile" uid="uid://djhbi5jvm44b5" path="res://assets/fonts/Silver.ttf" id="3_00mqs"]
[ext_resource type="Texture2D" uid="uid://caywscxjxtuhn" path="res://assets/gfx/contArrow.png" id="4_0u2j0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilyal"]
atlas = ExtResource("4_0u2j0")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq671"]
atlas = ExtResource("4_0u2j0")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_64kbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilyal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq671")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_0u2j0"]
resource_name = "appear"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ninePatchRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 512), Vector2(0, 384)]
}

[sub_resource type="Animation" id="Animation_ilyal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ninePatchRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ninePatchRect/mainText:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ninePatchRect/contArrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mq671"]
resource_name = "text"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ninePatchRect/mainText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.73333335),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ninePatchRect/contArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.73333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mq671"]
_data = {
&"RESET": SubResource("Animation_ilyal"),
&"appear": SubResource("Animation_0u2j0"),
&"text": SubResource("Animation_mq671")
}

[node name="dialogueWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ilyal")

[node name="dialogueWindow" type="CanvasLayer" parent="."]

[node name="ninePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 472.0
offset_right = 600.0
offset_bottom = 567.99994
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_p87ee")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
metadata/_edit_group_ = true

[node name="mainText" type="RichTextLabel" parent="ninePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.083000004
anchor_right = 0.9620001
anchor_bottom = 0.91700006
offset_top = 4.0319996
offset_right = 0.3199463
offset_bottom = 3.9679947
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ul6if")
theme_override_fonts/normal_font = ExtResource("3_00mqs")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "The other day I wanted to buy a [color=salmon]croissant[/color], so I went out and bought a [color=salmon]croissant[/color]. "
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="ninePatchRect" type="NinePatchRect" parent="ninePatchRect"]
visible = false
layout_mode = 0
offset_top = -32.0
offset_right = 200.0
texture = ExtResource("1_p87ee")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32

[node name="speaker" type="RichTextLabel" parent="ninePatchRect/ninePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.083000004
anchor_right = 0.9620001
anchor_bottom = 0.91700006
offset_left = 22.0
offset_top = 1.3440018
offset_right = -13.479996
offset_bottom = 9.311996
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ul6if")
theme_override_fonts/normal_font = ExtResource("3_00mqs")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "Pedestrian"
scroll_active = false

[node name="contArrow" type="AnimatedSprite2D" parent="ninePatchRect"]
visible = false
position = Vector2(624, 80)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_64kbh")
autoplay = "default"
frame_progress = 0.67981255

[node name="animationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../dialogueWindow")
libraries = {
&"": SubResource("AnimationLibrary_mq671")
}
autoplay = "appear"
